--- a/app/src/main/res/layout/fragment_id_m_01_03_02.xml
+++ b/app/src/main/res/layout/fragment_id_m_01_03_02.xml
@@ -1,13 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".M_01_03_02_Fragment_Id">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <EditText
+        android:id="@+id/edit_m_01_03_02_name"
+        android:layout_marginTop="60dp"
+        android:layout_width="wrap_content"
+        android:minWidth="380dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:hint="성명"
+        android:gravity="start"
+        android:paddingStart="20dp"
+        android:paddingLeft="20dp"
+        android:paddingVertical="20dp"/>
+
+    <EditText
+        android:id="@+id/edit_m_01_03_02_phone"
+        android:layout_marginTop="130dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="380dp"
+        android:layout_marginHorizontal="15dp"
+        android:hint="휴대폰번호"
+        android:gravity="start"
+        android:paddingStart="20dp"
+        android:paddingLeft="20dp"
+        android:paddingVertical="20dp"/>
+
+    <Button
+        android:id="@+id/btn_m_01_03_02_find_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="215dp"
+        android:background="@drawable/button_shape_m_01_03_01_login"
+        android:enabled="false"
+        android:minWidth="380dp"
+        android:text="아이디 찾기"
+        app:backgroundTint="#bbbbbb" />
+
 
 </FrameLayout>
