--- a/app/src/main/res/layout/activity_m_01_01_01.xml
+++ b/app/src/main/res/layout/activity_m_01_01_01.xml
@@ -7,6 +7,7 @@
     tools:context=".M_01_01_01">
 
     <TextView
+        android:id="@+id/text_head_m_01_01_01"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SHAHBET"
@@ -26,8 +27,8 @@
         android:text="반가워요, "
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="248dp"/>
+        android:layout_marginTop="200dp"
+        app:layout_constraintTop_toBottomOf="@id/text_head_m_01_01_01"/>
 
     <Button
         android:id="@+id/btn_m_01_01_01_login"
@@ -37,7 +38,10 @@
         android:text="로그인하고 게임하기"
         android:textSize="20sp"
         tools:layout_editor_absoluteX="69dp"
-        tools:layout_editor_absoluteY="291dp" />
+        tools:layout_editor_absoluteY="291dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_m_01_01_01_hi"/>
 
     <ImageButton
         android:id="@+id/imgBtn_m_01_01_01_game"
