--- a/app/src/main/res/layout/activity_m_01_03_01.xml
+++ b/app/src/main/res/layout/activity_m_01_03_01.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:hint="아이디를 입력해주세요"
+        android:inputType="text"
         android:layout_gravity="center"/>
     <EditText
         android:id="@+id/edit_m_01_03_01_pw"
@@ -47,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:padding="10dp"
+        android:inputType="text"
         android:hint="비밀번호를 입력해주세요"
         android:layout_gravity="center"/>
 
