--- a/app/src/main/res/layout/fragment_id_m_01_03_02.xml
+++ b/app/src/main/res/layout/fragment_id_m_01_03_02.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:hint="성명"
+        android:inputType="text"
         android:gravity="start"
         android:paddingStart="20dp"
         android:paddingLeft="20dp"
@@ -27,6 +28,7 @@
         android:minWidth="380dp"
         android:layout_marginHorizontal="15dp"
         android:hint="휴대폰번호"
+        android:inputType="phone"
         android:gravity="start"
         android:paddingStart="20dp"
         android:paddingLeft="20dp"
