--- a/app/src/main/res/layout/fragment_pw_m_01_03_05.xml
+++ b/app/src/main/res/layout/fragment_pw_m_01_03_05.xml
@@ -41,6 +41,7 @@
         android:minWidth="380dp"
         android:layout_marginHorizontal="15dp"
         android:hint="휴대폰번호"
+        android:inputType="phone"
         android:gravity="start"
         android:paddingStart="20dp"
         android:paddingLeft="20dp"
@@ -54,6 +55,7 @@
         android:minWidth="380dp"
         android:layout_marginHorizontal="15dp"
         android:hint="인증번호"
+        android:inputType="number"
         android:gravity="start"
         android:paddingStart="20dp"
         android:paddingLeft="20dp"
