--- a/app/src/main/res/layout/activity_m_01_02_01.xml
+++ b/app/src/main/res/layout/activity_m_01_02_01.xml
@@ -59,6 +59,7 @@
         android:background="@drawable/button_shape_m_01_03_01_login"
         android:minWidth="300dp"
         android:text="인증번호 받기"
+        android:enabled="false"
         android:textColor="#6B6B6B"
         android:textSize="15sp"
         app:backgroundTint="#C9C9C9" />
