--- a/app/src/main/res/layout/fragment_m_01_01_03__home.xml
+++ b/app/src/main/res/layout/fragment_m_01_01_03__home.xml
@@ -10,50 +10,55 @@
         android:layout_height="wrap_content"
         android:text="지금 당장 Bet Bet 오늘 잭팟 쌰~압 가능!"
         android:background="#0070c0"/>
-    <GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/grid_m_01_01_03"
-        android:layout_marginTop="80dp">
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:layout_margin="20dp">
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="10dp"
-            android:layout_margin="20dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="지금 Hot한 게임"
-                android:textSize="15sp"
-                android:textColor="#0070c0"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_m_01_01_03_home_clock"
-                android:scaleX="0.6"
-                android:scaleY="0.6"/>
-            <TextView
-                android:id="@+id/text_m_01_01_03_current_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="12:30:50"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:src="@drawable/ic_baseline_arrow_right_24"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="GoBETTIGN"/>
+            android:text="지금 Hot한 게임"
+            android:textSize="15sp"
+            android:textColor="#0070c0"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_m_01_01_03_home_clock"
+            android:scaleX="0.6"
+            android:scaleY="0.6"/>
+        <TextView
+            android:id="@+id/text_m_01_01_03_current_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="12:30:50"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/ic_baseline_arrow_right_24"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="GoBETTIGN"/>
 
-        </LinearLayout>
-        <GridView
+    </LinearLayout>
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/grid_m_01_01_03">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/horizontal_grid_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_row="2"/>
-    </GridLayout>
+            android:layout_height="match_parent"
+            android:scrollbarAlwaysDrawVerticalTrack="true"/>
+    </HorizontalScrollView>
+
+
+
 
     <ListView
         android:layout_width="match_parent"
