--- a/app/src/main/res/layout/completed_join_dialog.xml
+++ b/app/src/main/res/layout/completed_join_dialog.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="30dp"
     android:background="@drawable/back_corner_radius"
-    android:gravity="center">
-
+    android:padding="0dp"
+    android:gravity="center"
+    android:layout_gravity="center">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:padding="10dp"
+        android:text="알림"
+        android:textSize="15sp"
+        android:gravity="bottom"
+        android:layout_marginHorizontal="10dp"
+        android:background="@drawable/back_underborder_grey"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:text="회원 가입이 완료되었습니다."
         android:gravity="center"/>
     <Button
         android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@drawable/button_completed_join"
         android:text="확인"
         android:textSize="20sp"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:layout_margin="0dp"/>
 
 
 </LinearLayout>
