--- a/app/src/main/res/layout/not_found_id_dialog.xml
+++ b/app/src/main/res/layout/not_found_id_dialog.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:padding="10dp"
-        android:text="아이디 찾기 완료"
+        android:text="알림"
         android:textSize="15sp"
         android:gravity="bottom"
         android:layout_marginHorizontal="10dp"
@@ -23,28 +23,19 @@
         android:orientation="vertical"
         android:gravity="center">
         <TextView
-            android:id="@+id/text_found_id_dialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="honggildong"
-            android:textStyle="bold"
-            android:textSize="20sp"
+            android:text="아이디를 찾을 수 없습니다."
             android:gravity="center"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="아이디를 찾았습니다."
-            android:gravity="center"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="로그인 후 이용해 주세요."
+            android:text="입력 정보를 다시 확인해 주세요."
             android:gravity="center"/>
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_confirm_found_id"
+        android:id="@+id/btn_confirm_not_found_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/button_completed_join"
