--- a/app/src/main/res/layout/fragment_m_01_01_03__game_type_fragment.xml
+++ b/app/src/main/res/layout/fragment_m_01_01_03__game_type_fragment.xml
@@ -8,42 +8,45 @@
     tools:context=".M_01_01_03_Fragment_game_type_fragment">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/m_01_01_03_img1"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/m_01_01_03_img1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="   정가 \n 맞히기"
             android:layout_marginLeft="28dp"
             android:layout_marginTop="10dp"
-            android:textSize="12dp"
-            android:textColor="#000000"/>
+            android:text="정가\n맞히기"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:textSize="12dp" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/m_01_01_03_img2"
-        android:layout_marginTop="-59dp"
-        android:layout_marginLeft="120dp"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="-59dp"
+            android:background="@drawable/m_01_01_03_img2" />
 
 
         <TextView
             android:layout_width="50dp"
             android:layout_height="46dp"
-            android:layout_marginLeft="120dp"
-            android:text="   구간 \n 맞히기"
+            android:layout_marginLeft="115dp"
+            android:layout_marginTop="5dp"
+            android:text="구간\n맞히기"
+            android:gravity="center"
             android:textColor="#000000"
-            android:textSize="12dp"
-            android:layout_marginTop="10dp"/>
+            android:textSize="12dp" />
 
         <ImageView
             android:layout_width="42dp"
@@ -56,19 +59,11 @@
             android:layout_width="50dp"
             android:layout_height="46dp"
             android:layout_marginLeft="202dp"
-            android:text="   로하이 \n  맞히기"
+            android:layout_marginTop="7dp"
+            android:text="로하이\n맞히기"
+            android:gravity="center"
             android:textColor="#000000"
-            android:textSize="12dp"
-            android:layout_marginTop="7dp"/>
-
-
-
-
-
-
-
-
-
+            android:textSize="12dp" />
 
 
     </LinearLayout>
