--- a/app/src/main/res/layout/fragment_m_01_01_03__game_type_fragment.xml
+++ b/app/src/main/res/layout/fragment_m_01_01_03__game_type_fragment.xml
@@ -5,66 +5,72 @@
     android:layout_height="80dp"
     android:orientation="vertical"
     android:layout_gravity="center"
+    android:layout_marginTop="70dp"
     tools:context=".M_01_01_03_Fragment_game_type_fragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ImageView
+        android:gravity="center"
+        android:padding="10dp"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:id="@+id/concrete_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/m_01_01_03_img1" />
-
-        <TextView
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/m_01_01_03_img1" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="정가\n맞히기"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="12dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/section_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginTop="10dp"
-            android:text="정가\n맞히기"
+            android:layout_marginLeft="50dp"
             android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="12dp" />
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/m_01_01_03_img2" />
 
-
-        <ImageView
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="46dp"
+                android:text="구간\n맞히기"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="12dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/low_high_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="-59dp"
-            android:background="@drawable/m_01_01_03_img2" />
-
-
-        <TextView
-            android:layout_width="50dp"
-            android:layout_height="46dp"
-            android:layout_marginLeft="115dp"
-            android:layout_marginTop="5dp"
-            android:text="구간\n맞히기"
+            android:layout_marginLeft="50dp"
             android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="12dp" />
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="42dp"
+                android:layout_height="19dp"
+                android:background="@drawable/m_01_01_03_img3" />
 
-        <ImageView
-            android:layout_width="42dp"
-            android:layout_height="19dp"
-            android:layout_marginLeft="205dp"
-            android:layout_marginTop="-72dp"
-            android:background="@drawable/m_01_01_03_img3" />
-
-        <TextView
-            android:layout_width="50dp"
-            android:layout_height="46dp"
-            android:layout_marginLeft="202dp"
-            android:layout_marginTop="7dp"
-            android:text="로하이\n맞히기"
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="12dp" />
-
-
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="46dp"
+                android:text="로하이\n맞히기"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="12dp" />
+        </LinearLayout>
     </LinearLayout>
 </FrameLayout>
