--- a/app/src/main/res/layout/fragment_m_01_01_03__predict.xml
+++ b/app/src/main/res/layout/fragment_m_01_01_03__predict.xml
@@ -4,11 +4,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".M_01_01_03_Fragment_predict">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:gravity="end">
+        <ImageButton
+            android:id="@+id/search_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/search"
+            android:background="@color/transparent"/>
+        <ImageButton
+            android:id="@+id/write_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/write"
+            android:background="@color/transparent"
+            android:layout_marginLeft="10dp"/>
+        <ImageButton
+            android:id="@+id/ranking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ranking"
+            android:background="@color/transparent"
+            android:layout_marginLeft="10dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center_vertical"
+        android:background="#0070c0">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BEST"
+            android:background="@color/white" />
+        <TextView
+            android:id="@+id/text_best_predict_post"
+            android:layout_width="wrap_content"
+            android:maxWidth="380dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="[삼성전자]테술러-삼성전자 파트너 급등 신호탄!!"/>
+        <Spinner
+            android:id="@+id/sorting_predict_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"/>
+    </LinearLayout>
+    <ListView
+        android:id="@+id/list_predict_posts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"/>
+
 
 </FrameLayout>
