--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="background_high_price">#FFEEF5FB</color>
     <color name="low_price">#FFD1B2E8</color>
     <color name="background_low_price">#FFF0EAF5</color>
+    <color name="stock_name">#FFBF9000</color>
 </resources>
